--- a/src/app/training-pakage/info-buy-pakage/info-buy-pakage.component.html
+++ b/src/app/training-pakage/info-buy-pakage/info-buy-pakage.component.html
@@ -12,19 +12,37 @@
     </div>
     <h6 for="facility" class="title-filter">Thứ tập trong tuần </h6>
     <div class="things">
-      <p class="thing-item"  *ngFor="let thing of Things" [ngClass]="{'select': handleCheckSelectTime(thing.id)}" (click)="handleSelectTime(thing.id)">
+      <p class="thing-item"  *ngFor="let thing of Things" [ngClass]="{'select': checkSelectThing(thing.id)}" (click)="handleSelectTime(thing.id)">
         {{thing.label}}
         <i class="fa-solid fa-check" *ngIf=" handleCheckSelectTime(thing.id)"></i>
       </p>
     </div>
-    <h6 for="facility" class="title-filter">Ca tập</h6>
-    <div class="time-train">
-      <div class="things">
-        <p class="thing-item"  *ngFor="let time of timeTrain" [ngClass]="{'select': handleCheckSelectTimeTrain(time.id)}" (click)="handleSelectTimeTrain(time.id)">
-          {{formatTime(time.startTime) + ' - ' + formatTime(time.endTime)}}
-          <i class="fa-solid fa-check" *ngIf=" handleCheckSelectTimeTrain(time.id)"></i>
-        </p>
+    <div class="time" *ngIf="thingSelect">
+      <h6 for="facility" class="title-filter">Ca tập</h6>
+      <div class="time-train">
+        <div class="things">
+          <p class="thing-item"  *ngFor="let time of timeTrain" [ngClass]="{'select': handleCheckSelectTimeTrain(time.id)}" (click)="handleSelectTimeTrain(time.id)">
+            {{formatTime(time.startTime) + ' - ' + formatTime(time.endTime)}}
+            <i class="fa-solid fa-check" *ngIf=" handleCheckSelectTimeTrain(time.id)"></i>
+          </p>
+        </div>
       </div>
+    </div>
+    <div class="train-time" *ngIf="onCheckListTimes()">
+      <h6 for="facility" class="title-filter">Lịch tập của bạn</h6>
+      <table class="table" >
+        <thead>
+          <th>Thứ tập</th>
+          <th>Ca tập</th>
+        </thead>
+        <tbody>
+          <tr  *ngFor="let item of formatObjectToArray()" >
+              <td>Thứ {{item.key}}</td>
+              <td>{{showTimeTrain(item.value)}}</td>
+          </tr>
+        </tbody>
+
+      </table>
     </div>
     <div class="d-flex justify-content-end">
     <button type="button" class="btn btn-primary" (click)="handleNextPt()">Tiếp theo</button>
