fix-bug-and-update-cart

--- a/src/app/training-pakage/info-buy-pakage/info-buy-pakage.component.html
+++ b/src/app/training-pakage/info-buy-pakage/info-buy-pakage.component.html
@@ -91,7 +91,7 @@
       </div>
       <div class="detail-class">
         <div class="train-time" *ngIf="classDetail">
-          <h6 for="facility" class="title-filter">Lịch tập 1 tuần của lớp (gồm 50 buổi)</h6>
+          <h6 for="facility" class="title-filter">Lịch tập 1 tuần của lớp</h6>
           <table class="table" >
             <thead>
               <th>Thứ tập</th>
