--- a/src/app/schedule-admin-pt/schedule-admin-pt.component.html
+++ b/src/app/schedule-admin-pt/schedule-admin-pt.component.html
@@ -31,9 +31,9 @@
             <div *ngIf="schedule && schedule.length > 0">
               <!-- *ngIf="schedule && schedule.length > 0 && schedule.trainTime.id == time.id"  -->
                 <ng-container *ngIf="onCheckTimeTrain(time.id, schedule).length > 0 else noSchedule">
-                  <span  class="item-schedule" style="border: 1px solid #ccc;padding: 5px;" *ngFor="let item of onCheckTimeTrain(time.id, schedule)">
+                  <span  class="item-schedule" style="border: 1px solid #ccc;padding: 5px; cursor: pointer;" *ngFor="let item of onCheckTimeTrain(time.id, schedule)" (click)="handleUpdatePT1N(item)">
                     <b title="Lớp học">{{item.clazz.name}}</b>
-                    <i>{{item.clazz.pt.fullName}}</i>
+                    <i>{{item.pt.fullName}}</i>
                     <i title="Trạng thái"> ({{item.status == 'NOT_YET' ? 'Chưa đến' : 'Đã đến'}})</i>
                   </span>
                 </ng-container>
