--- a/src/app/order/admin-view/order-admin-view.component.html
+++ b/src/app/order/admin-view/order-admin-view.component.html
@@ -47,6 +47,7 @@
                 <thead class="thead-light">
                   <tr>
                     <th class="text-center" scope="col">Khách hàng</th>
+                    <th class="text-center" scope="col">Ngày đặt</th>
                     <th class="text-center" scope="col">Trạng thái thanh toán</th>
                     <th class="text-center" scope="col">Trạng thái đơn hàng</th>
                     <th class="text-center" scope="col">Mã giảm giá</th>
@@ -55,10 +56,11 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let o of orders">
+                  <tr *ngFor="let o of orders" (click)="handleViewDetail(o)">
                     <td>{{o.username}}</td>
+                    <td class="text-center">{{o.createdDate | date : 'dd/MM/yyyy ' : "GMT"}}</td>
                     <td class="text-center" [ngClass]="o.paid === true ? 'text-success' : 'text-danger'">{{o.paid ? 'Đã thanh toán' : 'Chưa thanh toán'}}</td>
-                    <td class="text-center" [ngClass]="o.status === 'Thành Công' ? 'text-success' : 'text-warning'">{{o.status}}</td>
+                    <td class="text-center" [ngClass]="o.status === 'Thành Công' ? 'text-success' : (o.status === 'Đang vận chuyển' ? 'text-warning' : 'text-danger')">{{o.status}}</td>
                     <td class="text-center">{{o.voucherName}}</td>
                     <td class="text-center">{{o.price}}</td>
                     <td class="text-center">
