--- a/src/app/classes/view-admin/view-class-admin.component.scss
+++ b/src/app/classes/view-admin/view-class-admin.component.scss
@@ -12,27 +12,20 @@
 }
 
 .title-descriptions {
+    margin-top: 5rem !important;
     width: 600px;
-    text-align: center;
-    display: inline-block;
 
     h1 {
-        font-size: 40px;
+        font-size: 50px;
         font-weight: bold;
         font-family: 'Poppins', sans-serif;
     }
 
     .lead {
-        font-size: 40px;
+        font-size: 20px;
         font-weight: 400;
-        color: #0A9FF8;
-        margin-top: 1rem;
-        // margin-bottom: 2rem;
-        // padding-bottom: 0.5rem;
         font-family: 'Poppins', sans-serif;
     }
-
-
 }
 
 .img-introduction {
@@ -46,8 +39,8 @@
     max-width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
-    margin-right: 10rem;
-    margin-left: 8rem;
+    margin-right: 15rem;
+    margin-left: 9rem;
 }
 
 .frame_3 {
@@ -71,8 +64,10 @@
     margin-right: 1rem;
 }
 
-.imageHotGym {
-    width: 335px;
+.imageProduct {
+    width: 200px;
+    height: 200px;
+    text-align: center;
 }
 
 .imageLastestNews {
@@ -114,65 +109,74 @@
     height: 390px;
 }
 
-.div-text {
-    width: 750px;
-    height: 250px;
-    border-radius: 40px;
-    background-color: #009FFF;
-    position: relative;
-    padding: 1rem 2rem 2rem;
-    margin-left: 13rem;
+.note-section {
+  width: 100%;
+}
 
-    p {
-        color: #FFFFFF;
-        font-size: 16px;
+.input-group .account_input {
+  height: 35px !important;
+  width: 30%;
+  .account_{
+    width: 100%;
+  }
+}
+
+
+.input-group {
+    margin-bottom: 1rem;
+    p{
+    width: 100%;
+    margin-bottom: 0.25rem;
     }
-
-
 }
 
-.imageAboutTitle {
-    position: absolute;
-    bottom: -250px;
-    left: 280px;
-    width: 600px;
-    height: 400px;
-    /* Chiều cao của hình ảnh sẽ chiếm 1/5 của chiều cao của div-text */
-    object-fit: cover;
+#product_name, #productType, #product_price{
+    width: 100%;
+    height: 35px;
 }
 
-.imageWM {
-    width: 1100px;
-    height: 400px;
-}
-
-hr {
-    border: none;
-    height: 2.5px;
-    background-color: #D0D5DD;
-    padding-top: 0;
-    margin-top: 0;
-    width: 485px;
-}
-
-.hr-mission {
-    border: none;
-    height: 2.5px;
-    background-color: #D0D5DD;
-    padding-top: 0;
-    margin-top: 0;
-    width: 205px;
-    float: left;
-}
-
-.text-bold {
+.btn-color-1 {
+    background-color: #605BFF;
+    border-radius: 15px;
+    width: 40%;
+    height: 34px;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 7px;
     font-weight: 700;
+    font-family: 'Roboto Slab', serif;
+    margin-right: 5rem ;
 }
 
-.text-left {
-    float: left;
-    width: 200px;
-    border-bottom: 3px solid #D0D5DD;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+.btn-color-2 {
+    background-color: #EF3826;
+    border-radius: 15px;
+    width: 40%;
+    height: 34px;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 7px;
+    font-weight: 700;
+    font-family: 'Roboto Slab', serif;
+}
+
+.container-product{
+    max-width: 850px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 4rem;
+    margin-left: 4rem;
+
+}
+
+.mt-1{
+    margin-top: 1rem !important;
+}
+
+.button-action{
+    width: 100%;
+    margin: 1rem 2rem;
+    display: flex;
+    // background-color: #979797;
+   gap: 5px;
 }
