--- a/src/app/product/list/list-product.component.html
+++ b/src/app/product/list/list-product.component.html
@@ -32,6 +32,7 @@
                     <th class="text-center" scope="col">Tên sản phẩm</th>
                     <th class="text-center" scope="col">Thể loại</th>
                     <th class="text-center" scope="col">Giá</th>
+                    <th class="text-center" scope="col">Tồn kho</th>
                     <th class="text-center" scope="col">Trạng thái</th>
                     <th class="text-center" scope="col">Tác vụ</th>
                   </tr>
@@ -44,10 +45,11 @@
                     <td>{{product.name}}</td>
                     <td class="text-center">{{product.category}}</td>
                     <td class="text-center">{{product.price}}</td>
+                    <td class="text-center">{{product.stockQuantity}}</td>
                     <td class="text-center">{{product.status}}</td>
                     <td class="text-center">
                       <div class="button-action">
-                        <div>
+                        <div *ngIf="roleId === 1 || roleId === 2">
                           <button class="btn btn-primary mr-2" aria-label="Edit" (click)="edit(product.code)">
                             <i class="fa-solid fa-pen-to-square"></i>
                           </button>
