--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -8,6 +8,7 @@
     <!-- <a [routerLink]="['/blog']" class="nav-item">Bài viết</a> -->
     <!-- <a [routerLink]="['/facilities']" class="nav-item">Cơ sở</a> -->
     <a [routerLink]="['/tickets']" class="nav-item">Vé</a>
+    <a [routerLink]="['/training-pakage']" class="nav-item">Gói tập</a>
     <a [routerLink]="['/about']" class="nav-item">Về chúng tôi</a>
   </div>
   <div class="user-info d-flex align-items-center">
@@ -40,6 +41,10 @@
           <a routerLinkActive="active" [routerLink]="['/product-customer-order']" class="dropdown-item">
             <i class="fa-solid fa-bars"></i>
             <span>Sản phẩm đã đặt</span>
+          </a>
+          <a routerLinkActive="active" [routerLink]="['/pakage-history']" class="dropdown-item">
+            <i class="fa-solid fa-bars"></i>
+            <span>Gói tập của tôi</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
             <i class="fas fa-lock"></i>
